Tests/ShouldSucceed/Ticket454.adl
CONTEXT Ticket454 IN ENGLISH

CLASSIFY B ISA C

r :: A * B
s :: C * C

RULE I[C] /\ r~;r |- s

ENDCONTEXT