Tests/ShouldFail/Try53.adl
CONTEXT Try53 IN DUTCH

CLASSIFY Citrus ISA Fruit

INTERFACE TryFruit : I[Fruit]
BOX 
["non-citrus fruit" : I[Fruit] /\ -I[Citrus]
]

ENDCONTEXT